--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.9",
+    "@mui/lab": "^7.0.0-beta.10",
     "@mui/material": "^6.4.9",
+    "@mui/x-date-pickers-pro": "^7.28.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
